# ppx_show

./: ppx_show.opam
src/: gen_printer.ml  gen_printer.mli
